--- a/datasience/hw/hw2.ipynb
+++ b/datasience/hw/hw2.ipynb
@@ -1,9 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "c63f2c50-6267-406e-b1bf-818b7d6acce6",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "742c2268-8db0-4dcd-b9e9-287664573557",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['physics', 98], ['calculus', 97], ['poetry', 85], ['history', 88]]\n",
+      "[['physics', 98], ['calculus', 97], ['poetry', 85], ['history', 88], ['computer science', 100], ['visual arts', 93]]\n",
+      "[['physics', 98], ['calculus', 97], ['poetry', 'pass'], ['history', 88], ['computer science', 100], ['visual arts', 98]]\n",
+      "결합결과\n",
+      "[['physics', 98], ['calculus', 97], ['poetry', 'pass'], ['history', 88], ['computer science', 100], ['visual arts', 98], ['politics', 80], ['latin', 96], ['dance', 97], ['architecture', 65]]\n"
+     ]
+    }
+   ],
    "source": [
     "subjects=[\"physics\",\"calculus\",\"poetry\",\"history\"]\n",
     "grade=[98,97,85,88]\n",
@@ -19,7 +33,7 @@
     "gradebook[2].remove(85)\n",
     "gradebook[2].append(\"pass\")\n",
     "print(gradebook)\n",
-    "\n",
+    "   \n",
     "last_semester_gradebook=[[\"politics\",80],[\"latin\",96],[\"dance\",97],\n",
     "                         [\"architecture\",65]]\n",
     "full_gradebook=gradebook+last_semester_gradebook\n",
